--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cuprum|Merriweather+Sans" rel="stylesheet">
 </head>
 <header>
 	<nav class="navbar navbar-default">
@@ -16,19 +17,13 @@
 			<a class="rede-social" href="https://doc-0s-0c-apps-viewer.googleusercontent.com/viewer/secure/pdf/nv4cvs9dnhqo70tip73evc1kvj4tik6t/0vpgjorughvsm1mdphm1d88jo4cb5f2o/1500646125000/drive/12424463081944643668/ACFrOgDNrDvIAcJtNCA3bEmuY9Ad48rAAbAPHBvXUx6JNRatr54J4g0bcMT3pbnto1fuQJ3k9VaplVMp-Hdd42AZfizq0k2Bkmc8ULX6kubFq25J34zUSyAlWSR8qw8=?print=true&nonce=ien26q02o0kem&user=12424463081944643668&hash=2ei5ujuladt9gkkc20g089srs1410jvs" title="Imprimir" target="_blank"><img src="img/print-button.png" alt="Imprimir versão reduzida do curriculum"></a>
 			<a class="rede-social" href="https://drive.google.com/open?id=0BwW1xP-R3GLlSGs5NExSTXIxN0E" target="_blank" title="Download"><img src="img/cloud-computing.png" alt="Imprimir curriculum"></a>
 			
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navbar" aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
+			<span class="mobile-btn" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navbar" aria-expanded="false"></span>
 		</div>
 		<div class="collapse navbar-collapse" id="collapse-navbar">
 			<ul class="nav navbar-nav">
 				<li><a class="linkref botao-ativo" href="#objetivo">Objetivo</a></li>
-				<li><a class="linkref" href="#graduacao">Graduação</a></li>
-				<li><a class="linkref" href="#cursos-complementares">Cursos</a></li>
-				<li><a class="linkref" href="#experiencia-profissional">Experiências</a></li>
+				<li><a class="linkref" href="#formacao">Formação</a></li>
+				<li><a class="linkref" href="#experiencia-profissional">Experiência</a></li>
 				<li><a class="linkref" href="#habilidades">Habilidades</a></li>
 			</ul>
 		</div>
@@ -53,7 +48,7 @@
 				</div>
 				<div class="detalhe-descricao col-xs-7 col-sm-7">
 					<p>Lucas Abrunhoza Scarpa</p>
-					<p>(12) 98195-4656</p>
+					<p id="telefone">(12) 98195-4656</p>
 					<p><a href="mailto: lucasabrunhoza@gmail.com">lucasabrunhoza@gmail.com</a></p>
 					<p>26/05/1992</p>
 				</div>
@@ -87,16 +82,13 @@
 		<p>Fácil adaptação e trabalho em grupo.</p>
 
 	</section>
-	<section id="graduacao" class="secao-corpo col-md-8 col-lg-8">
+	<section id="formacao" class="secao-corpo col-md-8 col-lg-8">
 		
 		<h2>Graduação</h2>
 		<h4>Engenharia da Computação</h4>
 		<h5>Universidade Santa Cecília Jan/10 - Dez/14</h5>
 		<p>Conhecimento e habilidades específicas no projeto e desenvolvimento e aplicação de sistemas informatizados, desde o estudo e especificação dos materiais, Gestão de TI, software e hardware, integrando-os nos equipamentos e serviços para os fins desejados.</p>
-		
-	</section>
-	<section id="cursos-complementares" class="secao-corpo col-md-8 col-lg-8 ">
-		
+
 		<h2>Cursos Complementares</h2>
 		<h4>SENAI Jul/12</h4>
 		<h5>C#</h5>
@@ -106,20 +98,22 @@
 		<p>Curso técnico de administração de servidores</p>
 		<h4>TIexames Jan/16</h4>
 		<h5>ITIL V3</h5>
-		<p>Curso voltado para certificação ITIL V# Foundation</p>
+		<p>Curso voltado para certificação ITIL V3 Foundation</p>
+		
+
 		
 	</section>
 	<section id="experiencia-profissional" class="secao-corpo col-md-8 col-lg-8 ">
 		
 		<h2>Experiência Profissional</h2>
 		<h4><span>Estagiário - </span> Universidade Santa Cecília</h4>    
-		<h5> Fev/11 - Dez/11</h5>
+		<h5> Fevereiro/11 - Dezembro/11</h5>
 		<h5>Santos-SP</h5>
 		<p>Monitoramento do laboratório de eletrônica com a responsabilidade de manter o perfeito funcionamento dos equipamentos e dar auxílio
 		 aos alunos para realização de projetos na área de eletrônica.</p>
 		
 		<h4><span>Estagiário - </span> Prefeitura Municipal de Santos</h4>   
-		<h5>Abr/12 - Abr/14</h5>
+		<h5>Abril/12 - Abril/14</h5>
 		<h5>Santos-SP</h5>
 		<p>Responsável pelo correto funcionamento de todos equipamentos da Secretaria de Desenvolvimento Urbano.</p>
 		<p>Participação no desenvolvimento de projetos críticos de mudança, instalação e otimização da rede.</p>
@@ -127,7 +121,7 @@
 		<p>Elaboração de documentos, procedimentos e levantamento de informações para análise.</p>
 
 		<h4><span>Proprietário - </span> Restaurante Frida</h4>  
-		<h5> Out/15 - Abr/17</h5>
+		<h5> Outubro/15 - Abril/17</h5>
 		<h5>São Sebastião-SP</h5>
 		
 		<p>Responsável por toda a área administrativa relacionada à contratação de funcionários, folha de pagamento, contagem de estoque, compras e contato com fornecedores. Site do restaurante: <a href="http://restaurantefridabar.com.br" target="_blank">www.restaurantefridabar.com.br</a>.</p>
@@ -148,33 +142,33 @@
 				<p>HTML5</p>
 
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%" >
-						<span class="sr-only">45% Complete</span>
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%" >
+						<span class="sr-only"></span>
 					</div>
 				</div>
 				<p>CSS3</p>
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-						<span class="sr-only">45% Complete</span>
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+						<span class="sr-only"></span>
 					</div>
 				</div>
 				<p>JavaScript</p>
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-						<span class="sr-only">45% Complete</span>
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 25%">
+						<span class="sr-only"></span>
 					</div>
 				</div>
 				<p>SQL</p>
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-						<span class="sr-only">45% Complete</span>
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+						<span class="sr-only"></span>
 					</div>
 				</div>
 
 				<p>ITIL</p>
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-						<span class="sr-only">45% Complete</span>
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+						<span class="sr-only"></span>
 					</div>
 				</div>
 			</section>
@@ -182,29 +176,35 @@
 				<h3>Sistemas</h3>
 				<p>Windows</p>
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-						<span class="sr-only">45% Complete</span>
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+						<span class="sr-only"></span>
 					</div>
 				</div>
 				<p>Linux</p>
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-						<span class="sr-only">45% Complete</span>
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+						<span class="sr-only"></span>
 					</div>
 				</div>
 			</section>
 			<section class="language skills  col-xs-12 col-sm-4 col-md-4 col-lg-4">
 				<h3>Idiomas</h3>
+				<p>Português</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+						<span class="sr-only"></span>
+					</div>
+				</div>
 				<p>Inglês</p>
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-						<span class="sr-only">45% Complete</span>
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+						<span class="sr-only"></span>
 					</div>
 				</div>
 				<p>Espanhol</p>
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-						<span class="sr-only">45% Complete</span>
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+						<span class="sr-only"></span>
 					</div>
 				</div>
 			</section>
@@ -213,7 +213,7 @@
 
 	<script src="assets/jquery/jquery-3.2.1.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-	<script src="js/menu-fix.js"></script>
-	<script src="js/ativa-sessao.js"></script>
+	<script src="js/menu-mobile.js"></script>
+	<script src="js/btn-sessao.js"></script>
 </body>
 </html>
